--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 The projects contains some of my notes.
+
+you can browse the notebooks using the nbviewer of jupyter.org: http://nbviewer.jupyter.org/github/svenmayer/notebooks/
