--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 The projects contains some of my notes.
 
-you can browse the notebooks using the nbviewer of jupyter.org: http://nbviewer.jupyter.org/github/svenmayer/notebooks/
+you can browse the notebooks using the nbviewer of jupyter.org:
+* http://nbviewer.jupyter.org/github/svenmayer/notebooks
+* http://nbviewer.jupyter.org/github/svenmayer/notebooks/sine_estimator.ipynb
+
